--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase": "^8.6.5",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
-    "nodemon": "^2.0.7"
+    "dotenv": "^10.0.0"
   }
 }
